Additionally handle critical legendary errors in import + Build bump + strings update

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -18108,6 +18108,7 @@
       }
     },
     "Error installing \"%@\"." : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
