Refactor error handling + workaround for output handler bug

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -47796,6 +47796,9 @@
         }
       }
     },
+    "Unable to proceed with installation." : {
+
+    },
     "Unable to uninstall \"%@\"." : {
       "localizations" : {
         "af" : {
