--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -31259,6 +31259,16 @@
     "Mythic Engine" : {
 
     },
+    "Mythic Engine %lld.%lld.%lld (%@)" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "Mythic Engine %1$lld.%2$lld.%3$lld (%4$@)"
+          }
+        }
+      }
+    },
     "Mythic Engine is Mythic's implementation of Apple's game porting toolkit (GPTK),\nwhich combines wine and D3DMetal, to create a windows gaming experience on macOS.\nSimilar to Proton, Mythic Engine attempts to be an emulator-like experience that\nenables native Windows games to be playable on macOS, while coming closer to native\nperformance than ever before. (performance will vary between games)" : {
       "localizations" : {
         "af" : {
@@ -49538,6 +49548,9 @@
           }
         }
       }
+    },
+    "Version %@" : {
+
     },
     "View" : {
       "localizations" : {
