--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -16218,9 +16218,6 @@
         }
       }
     },
-    "Engine Type" : {
-
-    },
     "Enhanced Sync (MSync)" : {
       "localizations" : {
         "af" : {
@@ -36790,6 +36787,9 @@
         }
       }
     },
+    "Preview" : {
+      "comment" : "Within the context of Mythic Engine"
+    },
     "Progress:" : {
       "localizations" : {
         "af" : {
@@ -43266,6 +43266,9 @@
     "Source" : {
 
     },
+    "Stable" : {
+      "comment" : "Within the context of Mythic Engine"
+    },
     "Status Unknown" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -44597,6 +44600,9 @@
         }
       }
     },
+    "Stream" : {
+
+    },
     "Submit" : {
       "localizations" : {
         "af" : {
@@ -45167,6 +45173,12 @@
           }
         }
       }
+    },
+    "The experimental (staging) stream of Mythic Engine.\nNew features will be available here before being released onto the stable stream, but more issues may be present.\nUse at your own risk." : {
+
+    },
+    "The stable stream of Mythic Engine." : {
+
     },
     "This process cannot be undone." : {
       "localizations" : {
@@ -46879,7 +46891,7 @@
         }
       }
     },
-    "To change the engine type, Mythic Engine must be reinstalled." : {
+    "To change the engine type, Mythic Engine must be reinstalled through onboarding." : {
 
     },
     "Type" : {
@@ -53172,7 +53184,7 @@
         }
       }
     },
-    "Would you like to reinstall Mythic Engine?" : {
+    "Would you like to remove Mythic Engine?" : {
 
     },
     "You can't delete the default bottle." : {
