Use `Task` instead of `DispatchQueue` + Fix GameCard implicitly unwrapped optional + Update strings

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -53184,7 +53184,7 @@
         }
       }
     },
-    "Would you like to remove Mythic Engine?" : {
+    "Would you like to reinstall Mythic Engine?" : {
 
     },
     "You can't delete the default bottle." : {
