feat: revamped import view tabview REALLY used to look that ugly?? sonoma users will suffer if they dont update macOS soon

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -29376,6 +29376,9 @@
         }
       }
     },
+    "Local" : {
+
+    },
     "Manage containers for Windows® applications" : {
       "localizations" : {
         "af" : {
