chore: string update + build bump

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -23858,6 +23858,9 @@
         }
       }
     },
+    "Images with a 3:4 aspect ratio fit the best." : {
+
+    },
     "Import" : {
       "localizations" : {
         "af" : {
