Update source file Localizable.xcstrings

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -5164,6 +5164,7 @@
       }
     },
     "Add a bottle" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -5353,7 +5354,11 @@
         }
       }
     },
+    "Add a container" : {
+
+    },
     "Add to favorites" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -5544,6 +5549,7 @@
       }
     },
     "Are you sure you want to cancel bottle creation?" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -5732,6 +5738,9 @@
           }
         }
       }
+    },
+    "Are you sure you want to cancel container creation?" : {
+
     },
     "Are you sure you want to cancel Mythic Engine (GPTK) installation?" : {
       "extractionState" : "stale",
@@ -8606,6 +8615,7 @@
       }
     },
     "Bottles" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -10128,6 +10138,7 @@
       }
     },
     "Choose a name for your bottle:" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -10316,6 +10327,9 @@
           }
         }
       }
+    },
+    "Choose a name for your container:" : {
+
     },
     "Choose the default base path for games:" : {
       "localizations" : {
@@ -11838,7 +11852,11 @@
         }
       }
     },
+    "Containers" : {
+
+    },
     "Create a bottle" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -12028,7 +12046,11 @@
         }
       }
     },
+    "Create a container" : {
+
+    },
     "Current Bottle" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -12408,6 +12430,9 @@
           }
         }
       }
+    },
+    "Current Container" : {
+
     },
     "Dashboard" : {
       "localizations" : {
@@ -21929,6 +21954,7 @@
       }
     },
     "Game: %@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -22119,6 +22145,7 @@
       }
     },
     "Game: %@, Type: %@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -23833,6 +23860,9 @@
           }
         }
       }
+    },
+    "Images with a 3:4 aspect ratio fit the best." : {
+
     },
     "Import" : {
       "localizations" : {
@@ -29352,6 +29382,9 @@
         }
       }
     },
+    "Local" : {
+
+    },
     "Manage containers for Windows® applications" : {
       "localizations" : {
         "af" : {
@@ -31839,6 +31872,9 @@
           }
         }
       }
+    },
+    "Mythic is checking your Epic library for new games." : {
+
     },
     "Mythic is connected to the internet, but cannot establish a connection to Epic." : {
       "localizations" : {
@@ -35648,6 +35684,7 @@
       }
     },
     "Open Bottles directory" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -35836,6 +35873,9 @@
           }
         }
       }
+    },
+    "Open Containers directory" : {
+
     },
     "Open..." : {
       "localizations" : {
@@ -38504,6 +38544,7 @@
       }
     },
     "Remove from favorites" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -41361,7 +41402,11 @@
         }
       }
     },
+    "Select a source:" : {
+
+    },
     "Setting up default bottle..." : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -41550,6 +41595,9 @@
           }
         }
       }
+    },
+    "Setting up default container..." : {
+
     },
     "Settings" : {
       "localizations" : {
@@ -45561,6 +45609,7 @@
       }
     },
     "This will erase every persistent setting and bottle." : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -45749,6 +45798,9 @@
           }
         }
       }
+    },
+    "This will erase every persistent setting and container." : {
+
     },
     "This will erase every persistent setting." : {
       "localizations" : {
@@ -50902,6 +50954,7 @@
       }
     },
     "Where do you want the bottle's base path to be located?" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -51090,6 +51143,9 @@
           }
         }
       }
+    },
+    "Where do you want the container's base path to be located?" : {
+
     },
     "Where do you want the game's base path to be located?" : {
       "extractionState" : "stale",
@@ -52423,6 +52479,7 @@
       }
     },
     "Wine" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
