--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -11855,6 +11855,9 @@
     "Containers" : {
 
     },
+    "Crash" : {
+
+    },
     "Create a bottle" : {
       "extractionState" : "stale",
       "localizations" : {
