feat: add dependency `WhatsNewKit` + futureproof for 0.4.1 + string update

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -50966,6 +50966,9 @@
         }
       }
     },
+    "What's new in Mythic" : {
+
+    },
     "Where do you want the bottle's base path to be located?" : {
       "extractionState" : "stale",
       "localizations" : {
