feat: dynamic installation type in `InstallStatusView` title

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -2869,6 +2869,16 @@
         }
       }
     },
+    "%@ \"%@\"..." : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ \"%2$@\"..."
+          }
+        }
+      }
+    },
     "%@ %@" : {
       "localizations" : {
         "af" : {
@@ -26533,6 +26543,7 @@
       }
     },
     "Installing \"%@\"..." : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
