--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -13592,6 +13592,9 @@
         }
       }
     },
+    "Discord activity cannot be modified: %@" : {
+
+    },
     "Disk Speed:" : {
       "localizations" : {
         "af" : {
@@ -25972,6 +25975,9 @@
         }
       }
     },
+    "Install Discord RPC Bridge? (Beta)" : {
+
+    },
     "Install Mythic Engine" : {
       "localizations" : {
         "af" : {
@@ -26161,6 +26167,9 @@
           }
         }
       }
+    },
+    "Install Mythic Engine Discord RPC Bridge" : {
+
     },
     "Install Rosetta 2" : {
       "localizations" : {
@@ -31698,6 +31707,9 @@
           }
         }
       }
+    },
+    "Mythic has detected that you have Discord installed.\nDiscord RPC Bridge is a beta feature that allows Windows® games to display their presence in Discord.\nWould you like to install it?" : {
+
     },
     "Mythic is checking the connection to Epic." : {
       "localizations" : {
@@ -41805,6 +41817,9 @@
         }
       }
     },
+    "Show activity on Discord" : {
+
+    },
     "Show in Finder" : {
       "localizations" : {
         "af" : {
@@ -48501,6 +48516,9 @@
           }
         }
       }
+    },
+    "Uninstall Mythic Engine Discord RPC Bridge" : {
+
     },
     "Update" : {
       "extractionState" : "stale",
