chore: build bump + string update

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -38625,6 +38625,9 @@
         }
       }
     },
+    "Unable to sign in to Epic." : {
+
+    },
     "Unable to uninstall \"%@\"." : {
       "localizations" : {
         "af" : {
